# showcase-aws-lc-binary-size

./: Cargo.toml  README.md  build-all-versions.sh
.cargo/: config.toml
src/: main.rs
