[package]
name = "showcase-aws-lc-binary-size"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[features]
ring = ["rustls/ring", "hyper-rustls/ring"]
aws-lc = ["rustls/aws-lc-rs", "hyper-rustls/aws-lc-rs"]

[dependencies]
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "tokio", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-roots", "http1", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
http-body-util = "0.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
